--- a/inetpub/wwwroot/ServicesMvc/ServicesMvc.csproj
+++ b/inetpub/wwwroot/ServicesMvc/ServicesMvc.csproj
@@ -2946,6 +2946,7 @@
     <Content Include="Views\Haendler\Partial\DetailsForm.cshtml" />
     <Content Include="Views\Haendler\Partial\Grid.cshtml" />
     <Content Include="Views\Haendler\Partial\Suche.cshtml" />
+    <Content Include="Views\Uebfuehrg\Partial\ProtokollUpload.cshtml" />
     <None Include="Web.config">
       <SubType>Designer</SubType>
     </None>
