once more persistence issues: weather widget, customizable + user dependent row span

--- a/inetpub/wwwroot/ServicesMvc/ServicesMvc.csproj
+++ b/inetpub/wwwroot/ServicesMvc/ServicesMvc.csproj
@@ -309,6 +309,7 @@
     <Content Include="App_Data\XmlData\Weather\JsonData\city.list.FR.json" />
     <Content Include="App_Data\XmlData\Weather\JsonData\city.list.IT.json" />
     <Content Include="Areas\Common\Views\Dashboard\Partial\WeatherWidgetCollection.cshtml" />
+    <Content Include="Areas\Common\Views\Dashboard\Partial\RowSpanDropDownMenu.cshtml" />
     <None Include="Teamviewer-Support.zip">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
