Überarbeitung Dokumentencenter Zulassung / ZI-Pool (work in progress)

--- a/Work/Tools/MvcTools/MvcTools.csproj
+++ b/Work/Tools/MvcTools/MvcTools.csproj
@@ -106,6 +106,7 @@
     <Compile Include="Contracts\IGridColumnsAutoPersistProvider.cs" />
     <Compile Include="Contracts\IGridSettingsAdministrationProvider.cs" />
     <Compile Include="Models\GridSettings.cs" />
+    <Compile Include="Models\TileSimpleModel.cs" />
     <Compile Include="Web\AreaAutoRegistration.cs" />
     <Compile Include="Web\Attributes\NoCache.cs" />
     <Compile Include="Web\CustomModelValidatorsProvider.cs" />
