--- a/inetpub/wwwroot/ServicesMvc/ServicesMvc.csproj
+++ b/inetpub/wwwroot/ServicesMvc/ServicesMvc.csproj
@@ -280,6 +280,9 @@
     <Content Include="Areas\Autohaus\Views\Fahrzeugbestand\Partial\HalterAdressenAuswahlGrid.cshtml" />
     <Content Include="Areas\Autohaus\Views\Fahrzeugbestand\Partial\KaeuferAdressenAuswahlGrid.cshtml" />
     <Content Include="Areas\Common\Views\GridAdmin\Partial\NoTranslationAvailable.cshtml" />
+    <Content Include="Areas\Autohaus\Views\Formulare\Partial\Uebersicht.cshtml" />
+    <Content Include="Areas\Autohaus\Views\Formulare\Partial\FormulareInfoArea.cshtml" />
+    <Content Include="Areas\Autohaus\Views\Formulare\Partial\ZiPoolFilter.cshtml" />
     <None Include="Teamviewer-Support.zip">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
@@ -790,7 +793,7 @@
     <Content Include="Areas\Autohaus\Views\ZulassungsReport\Partial\Suche.cshtml" />
     <Content Include="Areas\Autohaus\Views\ZulassungsReport\Partial\Grid.cshtml" />
     <Content Include="Areas\Autohaus\Views\Formulare\Index.cshtml" />
-    <Content Include="Areas\Autohaus\Views\Formulare\Partial\Grid.cshtml" />
+    <Content Include="Areas\Autohaus\Views\Formulare\Partial\ZiPoolInfoListe.cshtml" />
     <Content Include="Areas\Autohaus\Views\Formulare\Partial\Suche.cshtml" />
     <Content Include="Areas\Autohaus\Views\Zulassung\Partial\ZahlerKfzSteuer.cshtml" />
     <Content Include="Areas\Autohaus\Views\Zulassung\Partial\ZahlerKfzSteuerForm.cshtml" />
@@ -2946,6 +2949,7 @@
     <Content Include="Views\Haendler\Partial\DetailsForm.cshtml" />
     <Content Include="Views\Haendler\Partial\Grid.cshtml" />
     <Content Include="Views\Haendler\Partial\Suche.cshtml" />
+    <Content Include="Views\Shared\Partial\TileSimple.cshtml" />
     <None Include="Web.config">
       <SubType>Designer</SubType>
     </None>
