--- a/.gitignore
+++ b/.gitignore
@@ -190,3 +190,4 @@ dev/Test/WatchlistViewer/packages/
 dev/work/GAC/GeneralTools.dll
 dev/work/GAC/de-DE/GeneralTools.resources.dll
 dev/StockCapture/StockCaptureWeb/packages/
+dev/ToDoJenzen/packages/
