--- a/inetpub/wwwroot/ServicesMvc/ServicesMvc.csproj
+++ b/inetpub/wwwroot/ServicesMvc/ServicesMvc.csproj
@@ -296,6 +296,7 @@
     <Content Include="Areas\Autohaus\Views\Clever\Partial\IbanResult.cshtml" />
     <Content Include="Areas\Autohaus\Views\Clever\Partial\VehicleResult.cshtml" />
     <Content Include="Areas\Autohaus\Views\Clever\Partial\VehicleListItem.cshtml" />
+    <Content Include="Areas\Autohaus\Views\Clever\Partial\Common.cshtml" />
     <None Include="Teamviewer-Support.zip">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
