"Prime Checkbox" styling

--- a/inetpub/wwwroot/ServicesMvc/ServicesMvc.csproj
+++ b/inetpub/wwwroot/ServicesMvc/ServicesMvc.csproj
@@ -250,6 +250,7 @@
     <Content Include="_Themes\AH2015\images\kroschke_logo_on.png" />
     <Content Include="_Themes\AH2015\images\menu.png" />
     <Content Include="_Themes\AH2015\images\menu_white.png" />
+    <Content Include="_Themes\AH2015\images\uniform\prime-checkbox-sprite.png" />
     <Content Include="_Themes\AH2015\images\switch-2.png" />
     <Content Include="_Themes\AH2015\images\test.png" />
     <Content Include="_Themes\AH2015\images\avatar.png" />
