--- a/inetpub/wwwroot/ServicesMvc/ServicesMvc.csproj
+++ b/inetpub/wwwroot/ServicesMvc/ServicesMvc.csproj
@@ -247,8 +247,10 @@
     <Content Include="Images\kroschke-signs-services.png" />
     <Content Include="Images\teamviewer-icon.png" />
     <Content Include="_Themes\AH2015\images\background.png" />
+    <Content Include="_Themes\AH2015\images\express-versand.png" />
     <Content Include="_Themes\AH2015\images\kennzeichen-etikette.png" />
     <Content Include="_Themes\AH2015\images\kennzeichen.png" />
+    <Content Include="_Themes\AH2015\images\kroschke-evb.png" />
     <Content Include="_Themes\AH2015\images\kroschke-prime-flag.png" />
     <Content Include="_Themes\AH2015\images\kroschke-prime-star.png" />
     <Content Include="_Themes\AH2015\images\kroschke_logo.png" />
