--- a/Work/CkgDomainLogic/Lib/CkgDomainLogic.csproj
+++ b/Work/CkgDomainLogic/Lib/CkgDomainLogic.csproj
@@ -108,7 +108,6 @@
     <Compile Include="General\Models\Attributes\ZulassungsKreisAttribute.cs" />
     <Compile Include="General\Models\Attributes\VIN.cs" />
     <Compile Include="General\Models\ChartItemsPackage.cs" />
-    <Compile Include="General\Models\DataModels\DocumentErstellenBearbeiten.cs" />
     <Compile Include="General\Models\DataModels\FahrzeugStatus.cs" />
     <Compile Include="General\Models\DataModels\Hersteller.cs" />
     <Compile Include="General\Models\DataModels\KundeAusHierarchie.cs" />
@@ -123,12 +122,14 @@
     <Compile Include="General\Services\Dashboard\ChartService.cs" />
     <Compile Include="General\Services\Database\Models\CustomerDocument.cs" />
     <Compile Include="General\Services\Database\Models\CustomerDocumentCategory.cs" />
-    <Compile Include="General\Services\Database\Models\Dokument.cs" />
-    <Compile Include="General\Services\Database\Models\DokumentRight.cs" />
+    <Compile Include="General\Services\Database\Models\Document.cs" />
+    <Compile Include="General\Services\Database\Models\DocumentRight.cs" />
     <Compile Include="General\Services\Database\Models\DocumentType.cs" />
     <Compile Include="General\Services\Database\Models\Contact.cs" />
     <Compile Include="General\Services\Database\Models\AccountingArea.cs" />
     <Compile Include="General\Services\Database\Models\GroupArchiveAssigned.cs" />
+    <Compile Include="General\Services\Database\Models\UserOrganization.cs" />
+    <Compile Include="General\Services\Database\Models\OrganizationBase.cs" />
     <Compile Include="General\Services\Database\Models\PersistableObjectContainer.cs" />
     <Compile Include="General\Services\Database\Models\LoginUserMessageConfirmations.cs" />
     <Compile Include="General\Services\Database\Models\TranslatedResource_UserLogs.cs" />
