--- a/inetpub/wwwroot/ServicesMvc/ServicesMvc.csproj
+++ b/inetpub/wwwroot/ServicesMvc/ServicesMvc.csproj
@@ -228,6 +228,7 @@
     <Compile Include="App_Start\LocalizedRequiredAttributeAdapter.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Content Include="Areas\Autohaus\Views\Zulassung\Partial\ZulassungsdatenFormAnmeldung.cshtml" />
     <Content Include="assets\img\bg\1.jpg" />
     <Content Include="assets\img\bg\2.jpg" />
     <Content Include="assets\plugins\font-awesome\font\v2\fontawesome-webfont.svg" />
@@ -244,12 +245,23 @@
     <Content Include="Images\kroschke-prime-etikette.png" />
     <Content Include="Images\kroschke-prime-info-icon.png" />
     <Content Include="Images\kroschke-signs-services.png" />
+    <Content Include="Images\icons\48x48\delete.png" />
+    <Content Include="Images\icons\48x48\ok.png" />
+    <Content Include="Images\icons\48x48\warning.png" />
+    <Content Include="Images\icons\72x72\delete.png" />
+    <Content Include="Images\icons\72x72\ok.png" />
+    <Content Include="Images\icons\72x72\warning.png" />
+    <Content Include="Images\icons\96x96\delete.png" />
+    <Content Include="Images\icons\96x96\ok.png" />
+    <Content Include="Images\icons\96x96\warning.png" />
     <Content Include="Images\teamviewer-icon.png" />
     <Content Include="_Themes\AH2015\images\background.png" />
+    <Content Include="_Themes\AH2015\images\express-versand.png" />
     <Content Include="_Themes\AH2015\images\kennzeichen-etikette.png" />
     <Content Include="_Themes\AH2015\images\kennzeichen.png" />
-    <Content Include="_Themes\AH2015\images\kroschke-prime-flag.png" />
-    <Content Include="_Themes\AH2015\images\kroschke-prime-star.png" />
+    <Content Include="_Themes\AH2015\images\kroschke-evb.png" />
+    <Content Include="_Themes\AH2015\images\kroschke-prime-flag-down.png" />
+    <Content Include="_Themes\AH2015\images\kroschke-prime-flag-up.png" />
     <Content Include="_Themes\AH2015\images\kroschke_logo.png" />
     <Content Include="_Themes\AH2015\images\kroschke_logo_on.png" />
     <Content Include="_Themes\AH2015\images\menu.png" />
@@ -290,7 +302,13 @@
     <Content Include="Areas\Autohaus\Views\Fahrzeugbestand\Partial\HalterAdressenAuswahlGrid.cshtml" />
     <Content Include="Areas\Autohaus\Views\Fahrzeugbestand\Partial\KaeuferAdressenAuswahlGrid.cshtml" />
     <Content Include="Areas\Common\Views\GridAdmin\Partial\NoTranslationAvailable.cshtml" />
-    <Content Include="Areas\Autohaus\Views\Zulassung\Partial\ZulassungsdatenFormAnmeldung.cshtml" />
+    <Content Include="Areas\Autohaus\Views\Clever\Search.cshtml" />
+    <Content Include="Areas\Autohaus\Views\Clever\Partial\EvbResult.cshtml" />
+    <Content Include="Areas\Autohaus\Views\Clever\Partial\SearchResult.cshtml" />
+    <Content Include="Areas\Autohaus\Views\Clever\Partial\IbanResult.cshtml" />
+    <Content Include="Areas\Autohaus\Views\Clever\Partial\VehicleResult.cshtml" />
+    <Content Include="Areas\Autohaus\Views\Clever\Partial\VehicleListItem.cshtml" />
+    <Content Include="Areas\Autohaus\Views\Clever\Partial\Common.cshtml" />
     <None Include="Teamviewer-Support.zip">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
@@ -713,6 +731,7 @@
     <Compile Include="Areas\Admin\Models\AppUserOverviewSelektor.cs" />
     <Compile Include="Areas\Admin\Services\AppUserOverviewDataService.cs" />
     <Compile Include="Areas\Admin\ViewModels\AppUserOverviewViewModel.cs" />
+    <Compile Include="Areas\Autohaus\Controllers\CleverController.cs" />
     <Compile Include="Areas\Autohaus\Controllers\FormulareController.cs" />
     <Compile Include="Areas\Autohaus\Controllers\ZulassungsReportController.cs" />
     <Compile Include="Areas\Autohaus\Controllers\PartnerController.cs" />
@@ -2958,6 +2977,7 @@
     <Content Include="Views\Haendler\Partial\Grid.cshtml" />
     <Content Include="Views\Haendler\Partial\Suche.cshtml" />
     <Content Include="Views\Uebfuehrg\Partial\ProtokollUpload.cshtml" />
+    <Content Include="Views\Shared\Partial\FormControls\Form\LeftLabelControlRawTemplate.cshtml" />
     <None Include="Web.config">
       <SubType>Designer</SubType>
     </None>
