--- a/Work/CkgDomainLogic/CkgDomainEqui/CkgDomainFahrzeug.csproj
+++ b/Work/CkgDomainLogic/CkgDomainEqui/CkgDomainFahrzeug.csproj
@@ -169,6 +169,7 @@
     <Compile Include="Equi\Models\DataModels\EquiAussteuerung.cs" />
     <Compile Include="Equi\Models\DataModels\EquiTueteninhalt.cs" />
     <Compile Include="Equi\Models\DataModels\FahrzeugAnforderung.cs" />
+    <Compile Include="Equi\Models\DataModels\Stuecklisten.cs" />
     <Compile Include="Equi\Models\DataModels\StuecklistenKomponente.cs" />
     <Compile Include="Equi\Models\DataModels\VersandBeauftragung.cs" />
     <Compile Include="Equi\Models\DataModels\VersandBeauftragungSelektor.cs" />
@@ -209,6 +210,7 @@
     <Compile Include="Equi\ViewModels\EquiHistorieVermieterViewModel.cs" />
     <Compile Include="Equi\ViewModels\MahnsperreViewModel.cs" />
     <Compile Include="Equi\ViewModels\EinAusgaengeViewModel.cs" />
+    <Compile Include="Equi\ViewModels\StuecklistenViewModel.cs" />
     <Compile Include="Equi\ViewModels\VersandBeauftragungenViewModel.cs" />
     <Compile Include="Equi\ViewModels\VersandAbweichungenViewModel.cs" />
     <Compile Include="Equi\ViewModels\MahnreportViewModel.cs" />
