--- a/Work/CkgDomainLogic/CkgDomainAutohaus/CkgDomainAutohaus.csproj
+++ b/Work/CkgDomainLogic/CkgDomainAutohaus/CkgDomainAutohaus.csproj
@@ -123,12 +123,14 @@
     <Compile Include="General\Models\UiModel.cs" />
     <Compile Include="Zulassung\Models\BankAdressdaten.cs" />
     <Compile Include="Zulassung\Models\Fahrzeugdaten.cs" />
+    <Compile Include="Zulassung\Models\Versanddaten.cs" />
     <Compile Include="Zulassung\Models\PdfFormular.cs" />
     <Compile Include="Zulassung\Models\ReportModels\ZulassungsReportModel.cs" />
     <Compile Include="Zulassung\Models\ReportModels\ZulassungsReportSelektor.cs" />
     <Compile Include="Zulassung\Models\DataModels\Bankdaten.cs" />
     <Compile Include="Zulassung\Models\UIModels\FormulareSelektor.cs" />
     <Compile Include="Zulassung\Models\UIModels\ZiPoolSelektor.cs" />
+    <Compile Include="Zulassung\Models\VersandDienstleister.cs" />
     <Compile Include="Zulassung\Models\Vorgang.cs" />
     <Compile Include="Zulassung\Models\OptionenDienstleistungen.cs" />
     <Compile Include="Zulassung\Models\Zulassungsdaten.cs" />
