--- a/inetpub/wwwroot/ServicesMvc/ServicesMvc.csproj
+++ b/inetpub/wwwroot/ServicesMvc/ServicesMvc.csproj
@@ -238,6 +238,7 @@
     <Content Include="Images\Commands\24x24\warning.png" />
     <Content Include="Images\Commands\alert.png" />
     <Content Include="Images\Commands\OK.png" />
+    <Content Include="Images\maps\europe.svg" />
     <Content Include="Images\teamviewer-icon.png" />
     <Content Include="Scripts\maps\worldmap.js" />
     <Content Include="_Themes\AH2015\images\background.png" />
