--- a/inetpub/wwwroot/ServicesMvc/ServicesMvc.csproj
+++ b/inetpub/wwwroot/ServicesMvc/ServicesMvc.csproj
@@ -238,6 +238,25 @@
     <Content Include="Images\Commands\24x24\warning.png" />
     <Content Include="Images\Commands\alert.png" />
     <Content Include="Images\Commands\OK.png" />
+    <Content Include="Images\flags\48x48\AT.png" />
+    <Content Include="Images\flags\48x48\BE.png" />
+    <Content Include="Images\flags\48x48\CH.png" />
+    <Content Include="Images\flags\48x48\CZ.png" />
+    <Content Include="Images\flags\48x48\DE.png" />
+    <Content Include="Images\flags\48x48\DK.png" />
+    <Content Include="Images\flags\48x48\ES.png" />
+    <Content Include="Images\flags\48x48\FI.png" />
+    <Content Include="Images\flags\48x48\FR.png" />
+    <Content Include="Images\flags\48x48\GB.png" />
+    <Content Include="Images\flags\48x48\HU.png" />
+    <Content Include="Images\flags\48x48\IE.png" />
+    <Content Include="Images\flags\48x48\IT.png" />
+    <Content Include="Images\flags\48x48\LU.png" />
+    <Content Include="Images\flags\48x48\NL.png" />
+    <Content Include="Images\flags\48x48\PL.png" />
+    <Content Include="Images\flags\48x48\PT.png" />
+    <Content Include="Images\flags\48x48\RO.png" />
+    <Content Include="Images\flags\48x48\SE.png" />
     <Content Include="Images\maps\europe.svg" />
     <Content Include="Images\teamviewer-icon.png" />
     <Content Include="Scripts\maps\worldmap.js" />
