included 64x64 country flag icons

--- a/inetpub/wwwroot/ServicesMvc/ServicesMvc.csproj
+++ b/inetpub/wwwroot/ServicesMvc/ServicesMvc.csproj
@@ -257,6 +257,25 @@
     <Content Include="Images\flags\48x48\PT.png" />
     <Content Include="Images\flags\48x48\RO.png" />
     <Content Include="Images\flags\48x48\SE.png" />
+    <Content Include="Images\flags\64x64\AT.png" />
+    <Content Include="Images\flags\64x64\BE.png" />
+    <Content Include="Images\flags\64x64\CH.png" />
+    <Content Include="Images\flags\64x64\CZ.png" />
+    <Content Include="Images\flags\64x64\DE.png" />
+    <Content Include="Images\flags\64x64\DK.png" />
+    <Content Include="Images\flags\64x64\ES.png" />
+    <Content Include="Images\flags\64x64\FI.png" />
+    <Content Include="Images\flags\64x64\FR.png" />
+    <Content Include="Images\flags\64x64\GB.png" />
+    <Content Include="Images\flags\64x64\HU.png" />
+    <Content Include="Images\flags\64x64\IE.png" />
+    <Content Include="Images\flags\64x64\IT.png" />
+    <Content Include="Images\flags\64x64\LU.png" />
+    <Content Include="Images\flags\64x64\NL.png" />
+    <Content Include="Images\flags\64x64\PL.png" />
+    <Content Include="Images\flags\64x64\PT.png" />
+    <Content Include="Images\flags\64x64\RO.png" />
+    <Content Include="Images\flags\64x64\SE.png" />
     <Content Include="Images\maps\europe.svg" />
     <Content Include="Images\teamviewer-icon.png" />
     <Content Include="Scripts\maps\worldmap.js" />
